--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ h1 a {
 h1 small {
     font-size: 70%;
 }
+h1 .pronouns {
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    -webkit-background-clip: text;
+    color: transparent;
+}
 h2 {
     font-size: 30px;
     line-height: 50px;
@@ -117,7 +122,7 @@ h2 {
     animation: fadeIn 2s ease-out 1 1.3s;
     animation-fill-mode: forwards;
 }
-.wrapper{
+.wrapper {
     padding: 80px 80px 0 120px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
